Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignIntObjIntObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(Test())
        if v:GetValue() = 5
            output "passed"
        end
    end

    action Test() returns Integer
        Integer var
        var:SetValue(5)
        return var
    end
end