Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerIntObjField.quorum
class Main
    integer v = Test()
    action Main
    end

    action Test() returns integer
        Integer var
        var:SetValue(5)
        return var
    end
end